# Crystality

./: .gitignore  CMakeLists.txt  README.md  perf_linux_2.csv  perf_win_2.csv
contracts/: .gitignore  AirDrop.sole  AirDrop.sols  AirDrop_Standard.sol  AirDrop_Standard.sole  AirDrop_Standard.sols  Ballot.sol  Ballot.sole  Ballot.sols  Ballot_Standard.sol  Ballot_Standard.sole  Ballot_Standard.sols  BaseRegistrarImplementation.sol  BaseRegistrarImplementation.sole  Crystality.sole  Crystality.sols  ENS.sols  ENSRegistry.sol  ENSRegistry.sole  ERC20.sol  ERC20.sole  ERC20.sols  ERC20_Standard.sol  ERC20_Standard.sole  ERC20_Standard.sols  KV.sol  KV.sole  KV.sols  KittyBreeding.sol  KittyBreeding.sole  KittyBreeding.sols  KittyBreeding_Standard.sol  KittyBreeding_Standard.sole  KittyBreeding_Standard.sols  Million_Pixel.sol  Million_Pixel.sole  Million_Pixel.sols  Million_Pixel_Standard.sol  Million_Pixel_Standard.sole  Million_Pixel_Standard.sols  (+13 more)
contracts/ens_new/: BaseRegistrarImplementation.sol  ENSRegistry.sol
contracts/test_cases/: AirDrop.xtlts  Ballot.xtl  Ballot.xtlts  ERC20.xtl  ERC20.xtlts  ERC20_history.xtlts  KittyBreeding.xtlts  Million_Pixel.xtl  Million_Pixel.xtlts  sAirDrop.xtl  sBallot.xtl  sERC20.xtl  sKitty.xtl  sMP.xtl  sTest.xtlts
installer/linux/: control_linux  postinstall_linux.sh  register_linux.sh
installer/mac/: Crystality.pkgproj  bundle_mac.sh  postinstall_mac.sh  register_mac.sh
installer/win/: ConfigureVSCode.ps1  crystality.iss
proj.win/: evmhost.sln  evmhost.vcxproj  evmhost.vcxproj.filters
src/: EVMEncoder.cpp  EVMEncoder.h  EVMExecutionEngine.cpp  EVMExecutionEngine.h  EVMHost.cpp  EVMHost.h  EVMScriptRunner.cpp  EVMScriptRunner.h  EVMShard.cpp  EVMShard.h  EVMSimulator.cpp  EVMSimulator.h  SolidityScript.h  main.cpp
src/script_parser/: 2cpp.bat  SolidityScript.g4  SolidityScript.interp  SolidityScriptBaseListener.cpp  SolidityScriptBaseListener.h  SolidityScriptBaseVisitor.cpp  SolidityScriptBaseVisitor.h  SolidityScriptLexer.cpp  SolidityScriptLexer.h  SolidityScriptLexer.interp  SolidityScriptLexer.tokens  SolidityScriptListener.cpp  SolidityScriptListener.h  SolidityScriptParser.cpp  SolidityScriptParser.h  SolidityScriptRealListener.cpp  SolidityScriptRealListener.h  SolidityScriptTreeWalker.cpp  SolidityScriptTreeWalker.h  SolidityScriptVisitor.cpp  SolidityScriptVisitor.h
src/transpiler/: 2cpp.bat  CodeSerializer.cpp  CodeSerializer.h  ExtendSolidity.g4  ExtendSolidityBaseListener.cpp  ExtendSolidityBaseListener.h  ExtendSolidityBaseVisitor.cpp  ExtendSolidityBaseVisitor.h  ExtendSolidityLexer.cpp  ExtendSolidityLexer.h  ExtendSolidityListener.cpp  ExtendSolidityListener.h  ExtendSolidityParser.cpp  ExtendSolidityParser.h  ExtendSolidityRealListener.cpp  ExtendSolidityRealListener.h  ExtendSolidityTreeWalker.cpp  ExtendSolidityTreeWalker.h  ExtendSolidityVisitor.cpp  ExtendSolidityVisitor.h  transpiler.h
